// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lobsterserver-default-args e2e-evergreen-task 1`] = `
"testid1234
1234
ALL
line 0
line 1
line 2
line 3
line 4
line 5
line 6
line 7
line 8
line 9
something else
enumerate: 0"
`;

exports[`lobsterserver-default-args e2e-evergreen-test 1`] = `
"testid1234
line 0
line 1
line 2
line 3
line 4
line 5
line 6
line 7
line 8
line 9
something else
enumerate: 0"
`;

exports[`lobsterserver-default-args e2e-fetch-ok 1`] = `
"line 0
line 1
line 2
line 3
line 4
somethingelse 5
"
`;

exports[`lobsterserver-default-args e2e-logkeeper 1`] = `
"build1234
test1234
line 0
line 1
line 2
line 3
line 4
line 5
line 6
line 7
line 8
line 9
something else
enumerate: 0"
`;
